fix: icon alignment issue that was also bugging me :shipit:

--- a/public/less/admin/header.less
+++ b/public/less/admin/header.less
@@ -23,6 +23,10 @@
 		flex-direction: row-reverse;
 		margin: 0;
 
+		li {
+			align-self: end;
+		}
+
 		> * {
 			margin-right: 20px;
 		}
@@ -88,6 +92,10 @@
 		}
 	}
 
+	#main-menu li {
+		padding-bottom: 10px;
+	}
+
 	> ul {
 		list-style-type: none;
 		padding: 0px;
@@ -98,7 +106,6 @@
 		> li {
 			float: left;
 			margin-right: 30px;
-			padding-bottom: 10px;
 			border-bottom: 4px solid transparent;
 			transition: border-color 150ms linear;
 
